fixed stretched members pictures

--- a/src/design/components/home.scss
+++ b/src/design/components/home.scss
@@ -300,12 +300,20 @@ section{
   li {
     width: 100px;
     margin: 1em 2em;
-    img {
+  
+    .memberImageDiv{
       width: 100px;
       height: 100px;
-      display: block;
+      -webkit-border-radius: 60px;
+      -webkit-background-clip: padding-box;
+      -moz-border-radius: 60px;
+      -moz-background-clip: padding;
+      background-clip: padding-box;
       border-radius: 50%;
       margin-bottom: 0.3em;
+      float: left;
+      background-size: cover;
+      background-position: center center;
     }
     span {
       display: block;
